# devops

./: .clang-format  .gitignore  README.MD
agent/: CMakeLists.txt  Cargo.toml  agent.toml  main.cc
agent/src/: config.rs  context.rs  db.rs  log.rs  main.cc  main.rs  monitor.rs  server_info.rs  signal.rs
proto/: server_instance.proto
server/: black.js  config.js  config.toml  data.js  flags.js  index.js  package.json  token.js  ws.js
server/plugin/: index.js
server/plugin/jobs/: bare_env.js  build_comm.js  dependence.js  deploy_click.js  devops.js  docker_env.js  file_transfer.js  git_checkout.js  yarn.js
server/plugin/jobs/comm/: install.js
server/routers/: comm.js  deploy.js  log.js  mode.js  monitor.js  pipeline.js  server.js  upload.js  user.js  variable.js  vm.js
server/upload/: README.MD
server/utils/: log_stream.js  mogodb.js  script.js  str.js  tid.js  vmutils.js
server/utls/: vmutls.js
server/worker/: deploy.js  index.js  main.js  pipeline.js  server.js
server_agent/: index.js  package.json  server.js
web/: package.json
web/public/: index.html
web/src/: App.css  App.js  Main.js  index.css  index.js
web/src/api/: comm.js  deploy.js  log.js  module.js  monitor.js  pipeline.js  server.js  upload.js  user.js  variable.js  vm.js
web/src/comm/: util.js
web/src/state/: action.js  actions.js  state.js  store.js
web/src/view/: Login.js  P404.js  VLogin.js
web/src/view/compoments/: job_select.js  progress_hint.js  script_select.js
web/src/view/components/: codeline.js  job_select.js  script_select.js
web/src/view/dashboard/: index.js
web/src/view/deploy/: deploy.js  detail.js
web/src/view/log_view/: app_log.js  click_log.js  index.js  log_view.js
web/src/view/module/: module.js
web/src/view/monitor/: call.js  index.js  monitor.js  server.js  vm.js
web/src/view/pipeline/: create.js  detail.js  list.js
web/src/view/pipeline/stages/: build.js  comm.js  deploy.js  done.js  env.js  source.js
web/src/view/server/: index.js  server.js
web/src/view/setting/: index.js  user_info.js  user_list.js
web/src/view/variables/: index.js
web/src/view/vm/: vm.js
