[package]
name = "agent"
version = "0.1.0"
authors = ["kadds <itmyxyf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb={version = "1.1", default-features = false, features = ["tokio-runtime"]}
tokio= {version="0.2", features=["full"]}
toml = "0.5"
serde = "1.0"
daemonize = "0.4"
clap = {version = "2.33", default-features = false}
notify = "5.0.0-pre.3"

[profile.release]
lto = "thin"
opt-level="s"