[package]
authors = ["kadds <itmyxyf@gmail.com>"]
description = "Collects linux system info. (devops component)"
edition = "2018"
name = "agent"
version = "0.4.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = {version = "2.33", default-features = false}
daemonize = "0.4"
lazy_static = "1.4"
mongodb = {version = "1.1", default-features = false, features = ["tokio-runtime"]}
num = "0.3"
serde = "1.0"
tokio = {version = "0.2", features = ["full"]}
toml = "0.5"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
